# django-boilerplate

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
accounts/: admin.py  models.py
accounts/migrations/: 0001_initial.py  0002_auto_20200622_1023.py
boilerplate/: settings.py  urls.py
documents/: boilerplate.paw
users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_profile.py  0003_auto_20200624_1053.py  0004_auto_20200625_0117.py
